# ChromeDino

./: .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
Resources/: scores.json
src/: GameWidget.cpp  GameWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: GameRules.h  GameState.cpp  GameState.h  SaveData.cpp  SaveData.h
src/entities/: Dino.cpp  Dino.h  Obstacle.cpp  Obstacle.h  Projectile.cpp  Projectile.h
src/input/: InputState.h
src/rendering/: GameRenderer.cpp  GameRenderer.h
src/resources/: Assets.cpp  Assets.h
src/scene/: Background.cpp  Background.h
